add constants in method CandidateValidator  and fix another mistakes