@@ -3,7 +3,6 @@ package practice;
 import java.util.Arrays;
 import java.util.List;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import model.Candidate;
 import model.Person;
@@ -24,7 +23,7 @@ public class StreamPractice {
                 .filter(i -> i % 2 == 0)
                 .min()
                 .orElseThrow(() -> new RuntimeException("Can't get min value from list: "
-                        + "< Here is our input 'numbers' >"));
+                        + numbers));
     }
 
     /**
@@ -52,7 +51,7 @@ public class StreamPractice {
         return peopleList.stream()
                 .filter(p -> p.getSex() == Person.Sex.MAN)
                 .filter(m -> m.getAge() >= fromAge && m.getAge() <= toAge)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -69,12 +68,12 @@ public class StreamPractice {
                                           int maleToAge, List<Person> peopleList) {
         Predicate<Person> predicate = p -> p.getSex() == Person.Sex.MAN
                 && p.getAge() >= fromAge && p.getAge() <= maleToAge
-                    || p.getSex() == Person.Sex.WOMAN && p.getAge() >= fromAge
+                || p.getSex() == Person.Sex.WOMAN && p.getAge() >= fromAge
                 && p.getAge() <= femaleToAge;
 
         return peopleList.stream()
                 .filter(predicate)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -104,7 +103,7 @@ public class StreamPractice {
      */
     public List<String> validateCandidates(List<Candidate> candidates) {
         return candidates.stream()
-                .filter(new CandidateValidator().getPredicate())
+                .filter(new CandidateValidator())
                 .map(c -> c.getName())
                 .sorted()
                 .toList();
